# silvus

./: CMakeLists.txt
include/: common.h  display.h  engine.h  gfx.h  input.h
include/shaders/: default.glsl  shader_common.h  sprite_batch.glsl
src/: display.c  engine.c  gfx.c  input.c  main.c
